[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Cards/Platform.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/CardScripts/CardUI.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Cards/Block.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/CardScripts/DiscardPile.gd" type="Script" id=5]
[ext_resource path="res://Scripts/CardScripts/DrawPile.gd" type="Script" id=6]
[ext_resource path="res://Scenes/UI_Elements/CardSelect.tscn" type="PackedScene" id=7]

[node name="CardUI" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -650.0
margin_top = -681.0
margin_right = 650.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -358.0
margin_top = -200.0
margin_right = 358.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Platform" parent="Hand" instance=ExtResource( 1 )]

[node name="Platform2" parent="Hand" instance=ExtResource( 1 )]
margin_left = 144.0
margin_right = 284.0

[node name="Platform3" parent="Hand" instance=ExtResource( 1 )]
margin_left = 288.0
margin_right = 428.0

[node name="Block" parent="Hand" instance=ExtResource( 4 )]
margin_left = 432.0
margin_right = 572.0

[node name="Platform4" parent="Hand" instance=ExtResource( 1 )]
margin_left = 576.0
margin_right = 716.0

[node name="CardSelect" parent="." instance=ExtResource( 7 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -214.0
margin_top = -100.0
margin_right = 214.0
margin_bottom = 100.0

[node name="NextTurn" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 13.0
margin_top = 278.5
margin_right = 91.0
margin_bottom = 298.5
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "NextTurn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaDisplay" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 12.0
margin_top = 175.5
margin_right = 51.0
margin_bottom = 189.5
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 2 )
text = "Mana: 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawPile" type="Node" parent="."]
script = ExtResource( 6 )

[node name="DiscardPile" type="Node" parent="."]
script = ExtResource( 5 )

[connection signal="pressed" from="NextTurn" to="." method="_on_NextTurn_pressed"]
